gitops/apps/vaultwarden/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: timshel/vaultwarden:1.30.5-9
        ports:
        - name: web
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 64Mi
        volumeMounts:
        - name: startup
          mountPath: /etc/bitwarden_rs.d/
        - name: cacert
          mountPath: /usr/local/share/ca-certificates/ca.crt
          subPath: ca.crt
        - name: data
          mountPath: /data
      volumes:
      - name: startup
        configMap:
          name: startup
      - name: cacert
        secret:
          secretName: vaultwarden-tls
          items:
          - key: ca.crt
            path: ca.crt
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-data
