gitops/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: root-logicmg
spec:
  rules:
  - host: "bitwarden.logicmg.intra"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
  tls:
  - hosts:
    - "bitwarden.logicmg.intra"
    secretName: vaultwarden-tls
